# steam-game-data-collector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: general_issue.md
.github/workflows/: ci.yml
gameinsights/: __init__.py  cli.py  collector.py
gameinsights/model/: __init__.py  game_data.py
gameinsights/sources/: base.py  gamalytic.py  howlongtobeat.py  steamachievements.py  steamcharts.py  steamreview.py  steamspy.py  steamstore.py  steamuser.py
gameinsights/utils/: __init__.py  gamesearch.py  logger.py  metrics.py  ratelimit.py
steamgamedata/: collector.py
steamgamedata/model/: game_data.py
steamgamedata/sources/: __init__.py  base.py  gamalytic.py  howlongtobeat.py  steam.py  steamachievements.py  steamchart.py  steamcharts.py  steamreview.py  steamspy.py  steamstore.py  steamuser.py
steamgamedata/utils/: __init__.py  gamesearch.py  logger.py  ratelimit.py
tests/: conftest.py  test_cli.py  test_collector.py
tests/model/: test_game_data.py
tests/sources/: test_base.py  test_gamalytic.py  test_howlongtobeat.py  test_steamachievements.py  test_steamchart.py  test_steamreview.py  test_steamspy.py  test_steamstore.py  test_steamuser.py
tests/utils/: test_logger.py  test_ratelimit.py
