[tool.poetry]
name = "steamgamedata"
version = "0.1.0"
description = "a unified tool for collecting steam game data."
authors = ["nazhifkojaz <nazhifkojaz@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include =  "steamgamedata"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.0"
beautifulsoup4 = "^4.0"


[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"
black = "^25.1.0"
types-requests = "^2.32.4.20250611"
commitizen = "^4.8.3"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 99
extend-exclude = ["build", "dist"]
src = ["steamgamedata"]
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["steamgamedata"]

[tool.black]
line-length = 99
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
files = ["steamgamedata"]
