[tool.poetry]
name = "gameinsights"
version = "0.1.0"
description = "A unified tool for collecting Steam game data from multiple sources"
authors = ["nazhifkojaz <nazhifkojaz@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gameinsights"}]
homepage = "https://github.com/nazhifkojaz/steam-game-data-collector"
repository = "https://github.com/nazhifkojaz/steam-game-data-collector"
keywords = ["steam", "gaming", "data-analysis", "web-scraping"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.0"
beautifulsoup4 = "^4.0"
fake-useragent = "^2.2.0"
ratelimit = "^2.2.1"
rapidfuzz = "^3.13.0"
pydantic = "^2.11.7"
pandas = "^2.3.3"


[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"
black = "^25.1.0"
types-requests = "^2.32.4.20250611"
commitizen = "^4.8.3"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pandas-stubs = "^2.2.2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 99
src = ["gameinsights"]
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["gameinsights"]

[tool.black]
line-length = 99
target-version = ["py310"]
skip-string-normalization = true
preview = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "bs4.*",
    "fake_useragent.*",
    "ratelimit.*"
]
ignore_missing_imports = true

[tool.poetry.scripts]
gameinsights = "gameinsights.cli:main"
